--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
-{ "name": "yaml",
-  "version": "0.2.3",
+{
+  "name": "yaml",
+  "version": "0.3.0",
   "description": "Yaml parser",
-  "author": "TJ Holowaychuk <tj@vision-media.ca>",
-  "main": "./lib/yaml.js"
+  "author": ["TJ Holowaychuk <tj@vision-media.ca>", "Mohsen Azimi <mohsen@mohsenweb.com>"],
+  "main": "./lib/yaml.js",
+  "scripts": {
+    "test": "node examples/run"
+  }
 }
