--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "yaml",
   "version": "0.3.0",
   "description": "Yaml parser",
-  "author": ["TJ Holowaychuk <tj@vision-media.ca>", "Mohsen Azimi <mohsen@mohsenweb.com>"],
+  "author": [
+    "TJ Holowaychuk <tj@vision-media.ca>",
+    "Mohsen Azimi <mohsen@mohsenweb.com>"
+  ],
   "main": "./lib/yaml.js",
   "scripts": {
-    "test": "node examples/run"
+    "test": "node examples/run",
+    "lib": "./node_modules/browserify/bin/cmd.js src/yaml.js -o lib/browser.js"
+  },
+  "devDependencies": {
+    "browserify": "^5.12.0"
   }
 }
