--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "mohsen1/js-yaml",
+  "name": "apigee/js-yaml",
   "version": "0.3.0",
   "homepage": "https://github.com/mohsen1/js-yaml",
   "authors": [
