Make it yaml_2 in bower

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "yaml2",
+  "name": "yaml_2",
   "version": "0.3.5",
   "homepage": "https://github.com/mohsen1/js-yaml",
   "authors": [
