Support keys with leading slash

--- a/examples/hash.yml
+++ b/examples/hash.yml
@@ -13,6 +13,8 @@
     website: http://en.wikipedia.org/wiki/Austria
   space:
     description: space, the final frontier
+  /path:
+    description: this is a path
   brackets:
     square: Square [brackets] can go in the middle of strings
     squiggle: Squiggle {brackets} can also go in the middle of strings!
