--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "yaml_2",
   "version": "1.0.1",
-  "homepage": "https://github.com/mohsen1/js-yaml",
+  "homepage": "https://github.com/apigee/yaml2",
   "authors": [
     "Mohsen Azimi <mazimi@apigee.com>"
   ],
