--- a/examples/hash.yaml
+++ b/examples/hash.yaml
@@ -15,6 +15,8 @@
     description: space, the final frontier
   /path:
     description: this is a path
+  $ref:
+    description: this is a JSON Schema $ref
   brackets:
     square: Square [brackets] can go in the middle of strings
     squiggle: Squiggle {brackets} can also go in the middle of strings!
