--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ship": "sh ship.sh"
   },
   "devDependencies": {
-    "browserify": "^5.12.0"
+    "browserify": "^5.12.0",
+    "colors": "^0.6.2"
   }
 }
